1.增加新闻详情模块,并且增加新闻列表,新闻排行点击跳转功能

--- a/app/templates/news/index.html
+++ b/app/templates/news/index.html
@@ -102,7 +102,7 @@
             </div>
             <ul class="rank_list">
                 {% for news in data.click_news_list %}
-                    <li><span class="{{ loop.index0 | index_class }}">{{ loop.index }}</span><a href="#">{{ news.title }}</a></li>
+                    <li><span class="{{ loop.index0 | index_class }}">{{ loop.index }}</span><a href="/news/{{ news.id }}">{{ news.title }}</a></li>
                 {% endfor %}
 
             </ul>
