--- a/app/templates/news/detail.html
+++ b/app/templates/news/detail.html
@@ -29,8 +29,6 @@
         {# safe表明内容是安全的需要解析输出       #}
         {{ data.news.content | safe }}
 
-        {#        <a href="javascript:;" class="collection block-center">收藏</a>#}
-        {#        <a href="javascript:;" class="collected block-center" style="display: none"><span class="out">已收藏</span><span class="over">取消收藏</span></a>#}
         <a href="javascript:;" class="collected block-center" data-newid="{{ data.news.id }}"
            style="display: {% if data.is_collected %} block
            {% else %} none {% endif %};"><span class="out">已收藏</span><span class="over">取消收藏</span></a>
@@ -38,17 +36,21 @@
            style="display: {% if data.is_collected %} none
            {% else %} block {% endif %};">收藏</a>
 
-        <div class="comment_form_logout">
-            登录发表你的评论
-        </div>
 
-        <form action="" class="comment_form">
-            <div class="person_pic">
-                <img src="../../static/news/images/cat.jpg" alt="用户图标">
+        {% if data.user_info %}
+            <form action="" class="comment_form" data-newsid="{{ data.news.id }}">
+                <div class="person_pic">
+                    <img src="../../static/news/images/cat.jpg" alt="用户图标">
+                </div>
+                <textarea placeholder="请发表您的评论" class="comment_input"></textarea>
+                <input type="submit" name="" value="评 论" class="comment_sub">
+            </form>
+        {% else %}
+            <div class="comment_form_logout">
+                登录发表你的评论
             </div>
-            <textarea placeholder="请发表您的评论" class="comment_input"></textarea>
-            <input type="submit" name="" value="评 论" class="comment_sub">
-        </form>
+        {% endif %}
+
 
 
         <div class="comment_count">
@@ -56,83 +58,37 @@
         </div>
 
         <div class="comment_list_con">
-            <div class="comment_list">
-                <div class="person_pic fl">
-                    <img src="../../static/news/images/worm.jpg" alt="用户图标">
-                </div>
-                <div class="user_name fl">用户张山</div>
-                <div class="comment_text fl">
-                    遏制茅台酒价格过快上涨，多渠道供给，就不一定要买，租茅台酒也可以的，租售同权。开发共有产权茅台酒，让老百姓喝得起茅台酒，饮者有其酒。
-                </div>
-                <div class="reply_text_con fl">
-                    <div class="user_name2">用户李思</div>
-                    <div class="reply_text">
-                        遏制茅台酒价格过快上涨，多渠道供给，就不一定要买，租茅台酒也可以的，租售同权。开发共有产权茅台酒，让老百姓喝得起茅台酒，饮者有其酒。
+
+            {% for comment in data.comments %}
+                <div class="comment_list">
+                    <div class="person_pic fl">
+                        <img src="{% if comment.user.avatar_url %}
+                {{ comment.user.avatar_url }}
+            {% else %}
+                ../../static/news/images/person01.png
+            {% endif %}" alt="用户图标">
                     </div>
+                    <div class="user_name fl">{{ comment.user.nick_name }}</div>
+                    <div class="comment_text fl">{{ comment.content }}</div>
+                    {% if comment.parent %}
+                        <div class="reply_text_con fl">
+                            <div class="user_name2">{{ comment.parent.user.nick_name }}</div>
+                            <div class="reply_text">
+                                {{ comment.parent.content }}
+                            </div>
+                        </div>
+                    {% endif %}
+                    <div class="comment_time fl">{{ comment.create_time }}</div>
+                    <a href="javascript:;" class="comment_up fr" data-commentid="{{ comment.id }}"
+                       data-newsid="{{ comment.news_id }}">赞</a>
+                    <a href="javascript:;" class="comment_reply fr">回复</a>
+                    <form class="reply_form fl" data-commentid="{{ comment.id }}" data-newsid="{{ data.news.id }}">
+                        <textarea class="reply_input"></textarea>
+                        <input type="button" value="回复" class="reply_sub fr">
+                        <input type="reset" name="" value="取消" class="reply_cancel fr">
+                    </form>
                 </div>
-                <div class="comment_time fl">2017-01-01 00:00:00</div>
-                <a href="javascript:;" class="comment_up has_comment_up fr">1</a>
-                <a href="javascript:;" class="comment_reply fr">回复</a>
-                <from class="reply_form fl">
-                    <textarea class="reply_input"></textarea>
-                    <input type="submit" name="" value="回复" class="reply_sub fr">
-                    <input type="reset" name="" value="取消" class="reply_cancel fr">
-                </from>
-            </div>
-
-            <div class="comment_list">
-                <div class="person_pic fl">
-                    <img src="../../static/news/images/worm.jpg" alt="用户图标">
-                </div>
-                <div class="user_name fl">用户张山</div>
-                <div class="comment_text fl">
-                    遏制茅台酒价格过快上涨，多渠道供给，就不一定要买，租茅台酒也可以的，租售同权。开发共有产权茅台酒，让老百姓喝得起茅台酒，饮者有其酒。
-                </div>
-                <div class="comment_time fl">2017-01-01 00:00:00</div>
-                <a href="javascript:;" class="comment_up fr">赞</a>
-                <a href="javascript:;" class="comment_reply fr">回复</a>
-                <from class="reply_form fl">
-                    <textarea class="reply_input"></textarea>
-                    <input type="submit" name="" value="回复" class="reply_sub fr">
-                    <input type="reset" name="" value="取消" class="reply_cancel fr">
-                </from>
-            </div>
-
-            <div class="comment_list">
-                <div class="person_pic fl">
-                    <img src="../../static/news/images/worm.jpg" alt="用户图标">
-                </div>
-                <div class="user_name fl">用户张山</div>
-                <div class="comment_text fl">
-                    遏制茅台酒价格过快上涨，多渠道供给，就不一定要买，租茅台酒也可以的，租售同权。开发共有产权茅台酒，让老百姓喝得起茅台酒，饮者有其酒。
-                </div>
-                <div class="comment_time fl">2017-01-01 00:00:00</div>
-                <a href="javascript:;" class="comment_up fr">赞</a>
-                <a href="javascript:;" class="comment_reply fr">回复</a>
-                <from class="reply_form fl">
-                    <textarea class="reply_input"></textarea>
-                    <input type="submit" name="" value="回复" class="reply_sub fr">
-                    <input type="reset" name="" value="取消" class="reply_cancel fr">
-                </from>
-            </div>
-
-            <div class="comment_list">
-                <div class="person_pic fl">
-                    <img src="../../static/news/images/worm.jpg" alt="用户图标">
-                </div>
-                <div class="user_name fl">用户张山</div>
-                <div class="comment_text fl">
-                    遏制茅台酒价格过快上涨，多渠道供给，就不一定要买，租茅台酒也可以的，租售同权。开发共有产权茅台酒，让老百姓喝得起茅台酒，饮者有其酒。
-                </div>
-                <div class="comment_time fl">2017-01-01 00:00:00</div>
-                <a href="javascript:;" class="comment_up fr">赞</a>
-                <a href="javascript:;" class="comment_reply fr">回复</a>
-                <from class="reply_form fl">
-                    <textarea class="reply_input"></textarea>
-                    <input type="submit" name="" value="回复" class="reply_sub fr">
-                    <input type="reset" name="" value="取消" class="reply_cancel fr">
-                </from>
-            </div>
+            {% endfor %}
         </div>
 
     </div>
