1.新增跳转个人中心功能 2.完成基本资料更改功能

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,17 +5,17 @@
     {#    <title>首页-新经资讯</title>#}
     <title>{% block titleBlock %}新经资讯网{% endblock %}</title>
 
-    <link rel="stylesheet" type="text/css" href="../../static/news/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../../static/news/css/main.css">
-    <script type="text/javascript" src="../../static/news/js/jquery-1.12.4.min.js"></script>
-    <script type="text/javascript" src="../../static/news/js/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="../static/news/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../static/news/css/main.css">
+    <script type="text/javascript" src="../static/news/js/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="../static/news/js/main.js"></script>
     {#    <script type="text/javascript" src="../../static/news/js/index.js"></script>#}
     {% block scriptBlock %}{% endblock %}
 </head>
 <body>
 <div class="header_con">
     <div class="header">
-        <a href="#" class="logo fl"><img src="../../static/news/images/logo.png" alt="logo"></a>
+        <a href="#" class="logo fl"><img src="../static/news/images/logo.png" alt="logo"></a>
 
         {% block headerBlock %}
 
@@ -27,12 +27,9 @@
             <div class="user_login fr">
                 <img src="
 
-
-
-
                         {% if data.user_info.avatar_url %}{{ data.user_info.avatar_url }}{% else %}../../static/news/images/person01.png{% endif %}"
                      class="lgin_pic">
-                <a href="#">{{ data.user_info.nick_name }}</a>
+                <a href="/profile/info" id="nick_name">{{ data.user_info.nick_name }}</a>
                 <a href="javascript:;" onclick="logout()">退出</a>
             </div>
 
@@ -126,7 +123,7 @@
         <div class="form_group">
             <input type="text" name="code_pwd" id="imagecode" class="code_pwd">
             <div class="input_tip">图形验证码</div>
-            <img src="../../static/news/images/pic_code.png" class="get_pic_code" onclick="generateImageCode()">
+            <img src="../static/news/images/pic_code.png" class="get_pic_code" onclick="generateImageCode()">
             <div id="register-image-code-err" class="error_tip">图形码不能为空</div>
         </div>
         <div class="form_group">
