--- a/app/templates/profile/user.html
+++ b/app/templates/profile/user.html
@@ -19,7 +19,7 @@
             <li class="active"><a href="{{ url_for("profile.get_base_info") }}" target="main_frame">基本资料</a></li>
             <li><a href="{{ url_for("profile.pic_info") }}" target="main_frame">头像设置</a></li>
             <li><a href="../../static/news/html/user_follow.html" target="main_frame">我的关注</a></li>
-            <li><a href="../../static/news/html/user_pass_info.html" target="main_frame">密码修改</a></li>
+            <li><a href="{{ url_for("profile.pass_info") }}" target="main_frame">密码修改</a></li>
             <li><a href="../../static/news/html/user_collection.html" target="main_frame">我的收藏</a></li>
             <li><a href="../../static/news/html/user_news_release.html" target="main_frame">新闻发布</a></li>
             <li><a href="../../static/news/html/user_news_list.html" target="main_frame">新闻列表</a></li>
