--- a/app/templates/profile/user_pass_info.html
+++ b/app/templates/profile/user_pass_info.html
@@ -3,25 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<title>用户中心</title>
-	<link rel="stylesheet" type="text/css" href="../css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
-        <script type="text/javascript" src="../js/jquery-1.12.4.min.js"></script>
-    <script type="text/javascript" src="../js/user_pass_info.js"></script>
+	<link rel="stylesheet" type="text/css" href="../../static/news/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="../../static/news/css/main.css">
+        <script type="text/javascript" src="../../static/news/js/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="../../static/news/js/user_pass_info.js"></script>
 </head>
 <body class="inframe_body">
     <form class="pass_info">
         <h3>密码修改</h3>
         <div class="form-group">
             <label>当前密码：</label>
-            <input type="password" name="" class="input_txt">
+            <input type="password" name="old_password" class="input_txt">
         </div>
         <div class="form-group">
             <label>新密码：</label>
-            <input type="password" name="" class="input_txt">
+            <input type="password" name="new_password" class="input_txt">
         </div>
         <div class="form-group">
             <label>确认密码：</label>
-            <input type="password" name="" class="input_txt">
+            <input type="password" name="confirm_password" class="input_txt">
         </div>
        <div class="error_tip">提示信息</div>
         <div class="form-group">
