--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -23,11 +23,11 @@
 			<div class="first_menu active"><a href="#" class="icon01">用户管理</a></div>
 			<ul class="sub_menu show">
 				<li><a class="icon022" href="{{ url_for("admin.user_count") }}" target="main_frame">用户统计</a></li>
-				<li class="current"><a href="../../static/admin/html/user_list.html" class="icon021" target="main_frame">用户列表</a></li>
+				<li class="current"><a href="{{ url_for("admin.user_list") }}" class="icon021" target="main_frame">用户列表</a></li>
 			</ul>
 			<div class="first_menu"><a href="#" class="icon02">新闻管理</a></div>
 			<ul class="sub_menu">
-				<li><a href="../../static/admin/html/news_review.html" class="icon031" target="main_frame">新闻审核</a></li>
+				<li><a href="{{ url_for("admin.news_review") }}" class="icon031" target="main_frame">新闻审核</a></li>
 				<li><a href="../../static/admin/html/news_edit.html" class="icon032" target="main_frame">新闻版式编辑</a></li>
 				<li><a href="../../static/admin/html/news_type.html" class="icon034" target="main_frame">新闻分类管理</a></li>
 			</ul>
